force-app/main/default/objects/Invoice_Line_Item__c/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <formula>IF(ISBLANK( Subscription_Line_Item__c ), Booking__r.Center__r.Name+&apos; &apos;+ Booking__r.Center__r.LastName , Subscription_Line_Item__r.Enrolment__r.Center__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Center</label>
    <type>Text</type>
</CustomField>