force-app/main/default/objects/Invoice_Line_Item__c/fields/Enrolment__c.field-meta.xml
<CustomField>
    <fullName>Enrolment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrolment</label>
    <referenceTo>Enrolment__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>