force-app/main/default/objects/Invoice_Line_Item__c/fields/Is_Discount__c.field-meta.xml
<CustomField>
    <fullName>Is_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to identify Discount line items.</description>
    <label>Is Discount</label>
    <type>Checkbox</type>
</CustomField>