force-app/main/default/objects/Invoice_Line_Item__c/fields/Netsuite_GST_Code__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_GST_Code__c</fullName>
    <formula>IF(Left(Invoice__r.Name,2)!=&apos;HK&apos;,IF(Is_Deposit__c,&apos;UNDEF-SG&apos;,&apos;SR-SG&apos;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netsuite GST Code</label>
    <type>Text</type>
</CustomField>