force-app/main/default/objects/Invoice_Line_Item__c/fields/Netsuite_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Product_Name__c</fullName>
    <formula>IF(Amount__c&lt;0,
&apos;Discount : School Pre-Payment&apos;,
IF(Is_Deposit__c,
IF(Not(ISBLANK(Package__c)),
&apos;Deposit : Enrolment Deposit&apos;,
&apos;Deposit : Instrument Deposit&apos;
),
IF(Package_Name__c==&apos;Registration Fees&apos;,
&apos;Registration Fees : Registration Fee&apos;,
IF(Not(ISBLANK(Package__c)),
Package__r.Netsuite_Product_ID__c,
&apos;&apos;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netsuite Product Name</label>
    <type>Text</type>
</CustomField>