force-app/main/default/objects/Invoice_Line_Item__c/fields/Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Package_Name__c</fullName>
    <formula>IF(Is_Deposit__c , &apos;Deposit&apos;,IF( AND(NOT(ISBLANK(Remarks__c)),Remarks__c != &apos;Program Fees&apos;),Remarks__c,Package__r.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Name</label>
    <type>Text</type>
</CustomField>