force-app/main/default/objects/Invoice_Line_Item__c/fields/Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Package_Type__c</fullName>
    <formula>TEXT(Booking__r.Package__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Type</label>
    <type>Text</type>
</CustomField>