force-app/main/default/objects/Invoice_Line_Item__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <formula>Trim(text(Enrolment__r.Parent__r.Salutation ) + &quot; &quot; + Enrolment__r.Parent__r.FirstName + &quot; &quot; + Enrolment__r.Parent__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent</label>
    <type>Text</type>
</CustomField>