force-app/main/default/objects/Invoice_Line_Item__c/fields/POS_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>POS_Item_Type__c</fullName>
    <label>POS Item Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>