force-app/main/default/objects/Invoice_Line_Item__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <formula>IF(ISBLANK( Subscription_Line_Item__c ), Booking__r.Student__r.FirstName+&apos; &apos;+Booking__r.Student__r.LastName, 
Subscription_Line_Item__r.Enrolment__r.Student__r.FirstName+&apos; &apos;
+Subscription_Line_Item__r.Enrolment__r.Student__r.LastName)</formula>
    <label>Student</label>
    <type>Text</type>
</CustomField>