force-app/main/default/objects/Invoice_Line_Item__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <formula>IF(NOT(ISBLANK(Subscription_Line_Item__c)),
        Subscription_Line_Item__r.Enrolment__r.Teacher__r.FirstName +&apos; &apos;+Subscription_Line_Item__r.Enrolment__r.Teacher__r.LastName,
     IF(NOT(ISBLANK(Booking__c)),
         Booking__r.Teacher_Account__r.FirstName+&apos; &apos;+Booking__r.Teacher_Account__r.LastName,
         &apos;&apos;
     )
)</formula>
    <label>Teacher</label>
    <type>Text</type>
</CustomField>