force-app/main/default/objects/Invoice_Line_Item__c/fields/Teacher_Name__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Name__c</fullName>
    <formula>IF(ISBLANK( Subscription_Line_Item__c ), Booking__r.Teacher_Account__r.FirstName+&apos; &apos;+ Booking__r.Teacher_Account__r.LastName , Subscription_Line_Item__r.Enrolment__r.Teacher__r.FirstName+&apos;&apos;+Subscription_Line_Item__r.Enrolment__r.Teacher__r.LastName)</formula>
    <label>Teacher Name</label>
    <type>Text</type>
</CustomField>