force-app/main/default/objects/Invoice_Line_Item__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <formula>Discount_Amount__c - Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>