force-app/main/default/objects/Invoice_Line_Item__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <formula>Invoice__r.Name +&apos; - &apos; +  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction ID</label>
    <type>Text</type>
</CustomField>